--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Damali Brows & Beauty</title>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
 
+<style type="text/css">
+	
+	nav{
+		height: 150px;
+
+	}
+	body{
+		font-family: 'Questrial', sans-serif;
+	}
+	
+
+
+  
+
+	}
+	
+</style>
+<body>
+
+	  <nav>
+    <div class="nav-wrapper  grey darken-4">
+      <a href="#" class="brand-logo"><img 
+    src="./assets/images/1.png" 
+   
+    height="130px"
+    width="210px" /></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down ">
+        <li ><a href="sass.html">About</a></li>
+        <li><a href="badges.html">Services</a></li>
+        <li><a href="collapsible.html">FAQ's</a></li>
+        <li><a href="collapsible.html">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div>
+   <img src="./assets/images/flower.jpg"
+   height="342px"
+   width="1582px"/
+   >
+</div>
+ <div class="container">
+  <div class="row">
+
+      <div class="col s4">
+        <!-- Promo Content 1 goes here -->
+        <i class="large material-icons">insert_chart</i>
+
+        <p>Melanin Microshading and Microblading is a beauty open environment, that is designed for our clients to feel welcome and appreciated. My goal is to leave people feeling as though they have had a wonderful pampering encounter.</p>
+      </div>
+      <div class="col s4">
+        <!-- Promo Content 2 goes here -->
+         <i class="large material-icons">colorize</i>
+         <p>Melanin Microshading and Microblading is a beauty open environment, that is designed for our clients to feel welcome and appreciated. My goal is to leave people feeling as though they have had a wonderful pampering encounter.</p>
+      </div>
+      <div class="col s4">
+        <!-- Promo Content 3 goes here -->
+         <i class="large material-icons">create</i>
+         <p>Melanin Microshading and Microblading is a beauty open environment, that is designed for our clients to feel welcome and appreciated. My goal is to leave people feeling as though they have had a wonderful pampering encounter.</p>
+      </div>
+
+    </div>
+</div>s
+   
+  
+
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+</body>
+</html>
