--- a/index.html
+++ b/index.html
@@ -1,81 +1,57 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Damali Brows & Beauty</title>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
-	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-</head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../../../favicon.ico">
 
-<style type="text/css">
-	
-	nav{
-		height: 150px;
+    <title>Cover Template for Bootstrap</title>
 
-	}
-	body{
-		font-family: 'Questrial', sans-serif;
-	}
-	
+    <!-- Bootstrap core CSS -->
+    <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Custom styles for this template -->
+    <link href="assets/cover.css" rel="stylesheet">
+  </head>
 
-  
+  <body class="text-center">
 
-	}
-	
-</style>
-<body>
+    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+      <header class="masthead mb-auto">
+        <div class="inner">
+          <h3 class="masthead-brand">Cover</h3>
+          <nav class="nav nav-masthead justify-content-center">
+            <a class="nav-link active" href="#">Home</a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Contact</a>
+          </nav>
+        </div>
+      </header>
 
-	  <nav>
-    <div class="nav-wrapper  grey darken-4">
-      <a href="#" class="brand-logo"><img 
-    src="./assets/images/1.png" 
-   
-    height="130px"
-    width="210px" /></a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down ">
-        <li ><a href="sass.html">About</a></li>
-        <li><a href="badges.html">Services</a></li>
-        <li><a href="collapsible.html">FAQ's</a></li>
-        <li><a href="collapsible.html">Contact</a></li>
-      </ul>
+      <main role="main" class="inner cover">
+        <h1 class="cover-heading">Cover your page.</h1>
+        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+        <p class="lead">
+          <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+        </p>
+      </main>
+
+      <footer class="mastfoot mt-auto">
+        <div class="inner">
+          <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+        </div>
+      </footer>
     </div>
-  </nav>
-  <div>
-   <img src="./assets/images/flower.jpg"
-   height="342px"
-   width="1582px"/
-   >
-</div>
- <div class="container">
-  <div class="row">
-
-      <div class="col s4">
-        <!-- Promo Content 1 goes here -->
-        <i class="large material-icons">insert_chart</i>
-
-        <p>Melanin Microshading and Microblading is a beauty open environment, that is designed for our clients to feel welcome and appreciated. My goal is to leave people feeling as though they have had a wonderful pampering encounter.</p>
-      </div>
-      <div class="col s4">
-        <!-- Promo Content 2 goes here -->
-         <i class="large material-icons">colorize</i>
-         <p>Melanin Microshading and Microblading is a beauty open environment, that is designed for our clients to feel welcome and appreciated. My goal is to leave people feeling as though they have had a wonderful pampering encounter.</p>
-      </div>
-      <div class="col s4">
-        <!-- Promo Content 3 goes here -->
-         <i class="large material-icons">create</i>
-         <p>Melanin Microshading and Microblading is a beauty open environment, that is designed for our clients to feel welcome and appreciated. My goal is to leave people feeling as though they have had a wonderful pampering encounter.</p>
-      </div>
-
-    </div>
-</div>s
-   
-  
 
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-
-</body>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="../../../../assets/js/vendor/popper.min.js"></script>
+    <script src="../../../../dist/js/bootstrap.min.js"></script>
+  </body>
 </html>
